# back2basicspider

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
back/: scrapy.cfg
back/basics/: items.py  logs.txt  middlewares.py  models.py  pipelines.py  settings.py  test.jl
back/basics/loggers/: politelogger.py
back/basics/spiders/: base.py  quote.py
