[tool.poetry]
name = "back2basicspider"
version = "0.1.0"
description = ""
authors = ["Mrnobody <mrcartoonster@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.1.0"
ipython = "^7.14.0"
interrogate = "^1.2.0"
prettyprint = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
