[tool.poetry]
name = "back2basicspider"
version = "0.1.0"
description = ""
authors = ["Mrnobody <mrcartoonster@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.1.0"
ipython = "^7.14.0"
interrogate = "^1.2.0"
prettyprint = "^0.1.5"
pyperclip = "^1.8.0"
pre-commit = "^2.4.0"
psycopg2-binary = "^2.8.5"
sqlalchemy = "^1.3.17"
databases = {extras = ["postgresql"], version = "^0.3.2"}
yakutils = "^1.7.0"
prettyprinter = "^0.18.0"
pretty_errors = "^1.2.17"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
confidential = "^2.3.1"
logme = "^1.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
